--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <TITLE>It Works</TITLE>
 <BODY>
 <h1>WELCOME</h1>
-<font SIZE=32>Hello Everyone!!</font>
+<font SIZE=32>Hello Wolrd!!!</font>
 </BODY>
 </HTML>
