--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <HTML>
-<TITLE>It Works</TITLE>
+<TITLE>Welcome</TITLE>
 <BODY>
-<h1>WELCOME</h1>
+<h1>It Works!</h1>
 <font SIZE=32>Hello World!</font>
 </BODY>
 </HTML>
